--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,35 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The QR Experience, Reimagined. Generate QR codes instantly with our free, easy-to-use QR Code Generator. Create QR codes for URLs, text, contact information, and more."
     />
+    <meta
+      name="keywords"
+      content="QR code generator, QR code creator, QR code maker, free QR code, QR code scanner, QR code app"
+    />
+    <meta name="author" content="Samita Mondal" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="QRx | The QR Experience, Reimagined" />
+    <meta
+      property="og:description"
+      content="The QR Experience, Reimagined. Generate QR codes instantly with our free, easy-to-use QR Code Generator. Create QR codes for URLs, text, contact information, and more."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:title"
+      content="QRx | The QR Experience, Reimagined"
+    />
+    <meta
+      property="twitter:description"
+      content="The QR Experience, Reimagined. Generate QR codes instantly with our free, easy-to-use QR Code Generator. Create QR codes for URLs, text, contact information, and more."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +51,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>QR Code Generator | React</title>
+    <title>QRx | The QR Experience, Reimagined</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-R4QFY97Z0W"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-R4QFY97Z0W");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
