Add few more keywords to meta

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="twitter:description"
-      content="The QR Experience, Reimagined. Generate QR codes instantly with our free, easy-to-use QR Code Generator. Create QR codes for URLs, text, contact information, and more."
+      content="QRx, Samita, Samita Mondal, The QR Experience, Reimagined. Generate QR codes instantly with our free, easy-to-use QR Code Generator. Create QR codes for URLs, text, contact information, and more."
     />
     <meta property="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
